# lichkicklab

./: CMakeLists.txt  README.md  conanfile.txt
euler/ss-problem-84/: CMakeLists.txt  p84.cpp
trials/birth/: CMakeLists.txt  birth.cpp
trials/death/: CMakeLists.txt  death.cpp
trials/mit_course_pretest_ss/: CMakeLists.txt
trials/mit_course_ss/: CMakeLists.txt  assign1.cpp  floats_in.txt  prime_check_mit_pretest.cpp  primo
